<resources>
    <string name="app_name">HONEYIMHOME</string>
    <string name="start_track"> START TRACKING LOCATION </string>
    <string name="stop_track"> STOP TRACKING LOCATION </string>
    <string name="set_home"> SET HOME LOCATION </string>
    <string name="clear_home"> CLEAR HOME LOCATION </string>
    <string name="channel_description"> SMS CHANNEL </string>
    <string name="channel_name"> MY SMS CHANNEL </string>
    <string name="set_phone"> SET PHONE NUMBER </string>
    <string name="testSms"> TEST SMS </string>
    <string name="editNumber"> EDIT PHONE NUMBER </string>
</resources>
